fixing bug 190484 - After GRE install, user is asked to restart computer, ending rest of install. r=sgehani, sr=dveditz, a=asa